package DomainLayer;

/**
 * Domain entity representing a retail store branch within the corporate network.
 * Tracks specific supermarket location entries and their unique business identifier codes.
 */
public class Branch {
    int branch_id;
    String location;
}
